--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.3.0",
+    "antd": "^6.2.2",
     "axios": "^1.13.4",
     "next": "16.1.6",
     "react": "19.2.3",
