--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.15.7",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5"
   }
 }
