--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "axios": "^1.13.4",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
-  },
-  "devDependencies": {
+    "react-dom": "19.2.3",
     "@netlify/plugin-nextjs": "^5.15.7",
     "@types/node": "^20",
     "@types/react": "^19",
